fix position fixed on register & login page cutting out top of the form on smaller screens

--- a/resources/sass/components/_authentication.scss
+++ b/resources/sass/components/_authentication.scss
@@ -3,7 +3,6 @@
     -ms-flex-align: center;
     align-items: center;
     height: 100%;
-    position: fixed;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
